--- a/StockMarketApi/MainWindow.xaml
+++ b/StockMarketApi/MainWindow.xaml
@@ -5,8 +5,26 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StockMarketApi"
         mc:Ignorable="d"
+        Loaded="WindowLoaded"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
+        <ListView x:Name="TimeStampList" Grid.Column="0" Grid.Row="0" Grid.RowSpan="3">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="TimeStamp"  DisplayMemberBinding="{Binding GetTimeStamp}"/>
+                </GridView> 
+            </ListView.View>
+        </ListView>
     </Grid>
 </Window>
