--- a/StockMarketApi/MainWindow.xaml
+++ b/StockMarketApi/MainWindow.xaml
@@ -7,24 +7,39 @@
         mc:Ignorable="d"
         Loaded="WindowLoaded"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
 
-        <ListView x:Name="TimeStampList" Grid.Column="0" Grid.Row="0" Grid.RowSpan="3">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn Header="TimeStamp"  DisplayMemberBinding="{Binding GetTimeStamp}"/>
-                </GridView> 
-            </ListView.View>
-        </ListView>
-    </Grid>
+    <DockPanel>
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="File">
+                
+            </MenuItem>
+        </Menu>
+        <Grid Margin="0 5 0 0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <DockPanel Grid.Column="0" Grid.Row="0"  Grid.ColumnSpan="2">
+                <Label Content="Search:"   DockPanel.Dock="Left"/>
+                <ComboBox x:Name="SearchComboBox" IsEditable="True" Margin="5" KeyUp="Search_TextChange"
+                          Focusable="True">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding GetResults}" />
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+            </DockPanel>
+
+            
+        </Grid>
+    </DockPanel>
 </Window>
